<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidTipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="bill_hint">Enter the bill total</string>
    <string name="ten_percent_radio_text">10%</string>
    <string name="fifteen_percent_radio_text">15%</string>
    <string name="twenty_percent_radio_text">20%</string>
    <string name="tip_textview_label">Tip is: ______</string>

</resources>
